# AVC_prediction_projet

./: Article de projet.docx  Article sur la prédiction d'avc.ipynb  Papa descriptions.docx  images.ipynb  predict.py  pyproject.toml  stroke-prediction.ipynb  test.py  ~$ticle de projet.docx
.ipynb_checkpoints/: Article sur la prédiction d'avc-checkpoint.ipynb  stroke-prediction2-Copy1-checkpoint.ipynb
stroke_prediction/: __init__.py
stroke_prediction/donnees/: __init__.py
stroke_prediction/donnees/donnees_traitees/: X_test.txt  X_train.txt  y.test.txt  y_train.txt
stroke_prediction/exploration/: __init__.py  analyse_de_fond.py  analyse_de_forme.py
stroke_prediction/modeles/: logistic_model.joblib  logistic_model_good.joblib
stroke_prediction/modelisation/: __init__.py  modelisation  modelisation.py
stroke_prediction/preprocess/: __init__.py  preprocess.py
tests/: test_avc_prediction_projet.py
