[tool.poetry]
name = "AVC_prediction_projet"
version = "0.1.0"
description = ""
authors = ["= <=>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
pandas = "^1.4.0"
plotly = "^5.5.0"
dash = "^2.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
